[gd_scene load_steps=7 format=3 uid="uid://dfgrbmn7yh2l6"]

[ext_resource type="Texture2D" uid="uid://ccmupxxb4ugtd" path="res://art/snake_graphics.png" id="1_qyygb"]
[ext_resource type="Script" path="res://scripts/TilemapControl.gd" id="2_flmim"]
[ext_resource type="Script" path="res://scripts/ScoreDisplay.gd" id="3_eny4n"]
[ext_resource type="Script" path="res://scripts/PauseMenu.gd" id="4_xf5u3"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uovme"]
texture = ExtResource("1_qyygb")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSet" id="TileSet_tphgg"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_uovme")

[node name="game" type="Node"]

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(0.5, 0.5)
tile_set = SubResource("TileSet_tphgg")
format = 2
layer_1/name = ""
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array()
layer_2/name = ""
layer_2/enabled = true
layer_2/modulate = Color(1, 1, 1, 1)
layer_2/y_sort_enabled = false
layer_2/y_sort_origin = 0
layer_2/z_index = 0
layer_2/tile_data = PackedInt32Array()
script = ExtResource("2_flmim")

[node name="ScoreUI" type="Label" parent="TileMap"]
offset_right = 640.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 76
text = "Score:"
vertical_alignment = 1
script = ExtResource("3_eny4n")

[node name="PauseMenu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_xf5u3")

[node name="ResumeButton" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = 384.0
offset_top = 216.0
offset_right = 768.0
offset_bottom = 308.0
theme_override_font_sizes/font_size = 61
text = "RESUME"

[node name="RestartButton" type="Button" parent="PauseMenu"]
visible = false
layout_mode = 0
offset_left = 384.0
offset_top = 216.0
offset_right = 768.0
offset_bottom = 308.0
theme_override_font_sizes/font_size = 61
text = "RESTART"

[node name="QuitButton" type="Button" parent="PauseMenu"]
layout_mode = 0
offset_left = 472.0
offset_top = 536.0
offset_right = 680.0
offset_bottom = 600.0
theme_override_font_sizes/font_size = 30
text = "QUIT
"

[node name="NewGameText" type="Label" parent="PauseMenu"]
layout_mode = 0
offset_left = 432.0
offset_top = 336.0
offset_right = 720.0
offset_bottom = 375.0
theme_override_font_sizes/font_size = 26
text = "NEW GAME SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewGameButton" type="Button" parent="PauseMenu/NewGameText"]
layout_mode = 0
offset_left = -13.3334
offset_top = 135.0
offset_right = 306.667
offset_bottom = 183.0
text = "START NEW GAME"

[node name="WidthSlider" type="HSlider" parent="PauseMenu/NewGameText"]
layout_mode = 0
offset_left = -13.3334
offset_top = 39.0
offset_right = 178.667
offset_bottom = 71.0
min_value = 5.0
max_value = 50.0
value = 5.0
rounded = true

[node name="WidthText" type="Label" parent="PauseMenu/NewGameText/WidthSlider"]
layout_mode = 0
offset_left = 208.0
offset_right = 320.0
offset_bottom = 32.0
text = "WIDTH:"
vertical_alignment = 1

[node name="HeightSlider" type="HSlider" parent="PauseMenu/NewGameText"]
layout_mode = 0
offset_left = -13.3334
offset_top = 87.0
offset_right = 178.667
offset_bottom = 119.0
min_value = 5.0
max_value = 30.0
value = 5.0
rounded = true

[node name="HeightText" type="Label" parent="PauseMenu/NewGameText/HeightSlider"]
layout_mode = 0
offset_left = 208.0
offset_right = 320.0
offset_bottom = 32.0
text = "HEIGHT:"
vertical_alignment = 1

[node name="PausedText" type="Label" parent="PauseMenu"]
visible = false
layout_mode = 0
offset_left = 272.0
offset_top = 32.0
offset_right = 880.0
offset_bottom = 215.0
theme_override_font_sizes/font_size = 131
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverText" type="Label" parent="PauseMenu"]
layout_mode = 0
offset_left = 176.0
offset_top = -16.0
offset_right = 976.0
offset_bottom = 167.0
theme_override_font_sizes/font_size = 131
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverText2" type="Label" parent="PauseMenu"]
layout_mode = 0
offset_top = 144.0
offset_right = 1152.0
offset_bottom = 211.0
theme_override_font_sizes/font_size = 46
text = "Death Reason"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PauseMenu/ResumeButton" to="PauseMenu" method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/RestartButton" to="PauseMenu" method="_on_restart_button_pressed"]
[connection signal="pressed" from="PauseMenu/QuitButton" to="PauseMenu" method="_on_quit_button_pressed"]
[connection signal="pressed" from="PauseMenu/NewGameText/NewGameButton" to="PauseMenu" method="_on_new_game_button_pressed"]
